<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Den</string>
    <string name="user_interface_category">UI</string>
    <string name="system_category">System</string>
    <string name="other_category">Other</string>
    <string name="device_part_title">Device features</string>
    <string name="device_part_category">Device</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_summary">Edit status bar appearance</string>
    <string name="network_traffic_state_title">Show net activity in statusbar</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="roaming_indicator_icon_title">Roaming indicator</string>
    <string name="roaming_indicator_icon_summary">Display roaming indicator in signal icon when in roaming mode</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon</string>
    <string name="battery_bar_title">Battery bar</string>
    <string name="battery_bar_color_title">Light colors</string>
    <string name="battery_bar_color_summary">Color range used on dark status bar</string>
    <string name="battery_bar_dark_color_title">Dark colors</string>
    <string name="battery_bar_dark_color_summary">Color range used on light status bar</string>
    <string name="battery_bar_charging_color_title">Light charging color</string>
    <string name="battery_bar_charging_color_summary">Charging color used on dark status bar</string>
    <string name="battery_bar_charging_dark_color_title">Dark charging color</string>
    <string name="battery_bar_charging_dark_color_summary">Charging color used on light status bar</string>
    <string name="battery_bar_style_title">Alignment</string>
    <string name="battery_bar_thickness_title">Thickness</string>
    <string name="battery_bar_animate_title">Charging animation</string>
    <string name="battery_bar_style_regular">Regular</string>
    <string name="battery_bar_style_center_mirrored">Center-mirrored</string>
    <string name="battery_bar_style_reversed">Reversed</string>
    <string name="battery_bar_use_charging_color_title">Custom charging color</string>
    <string name="battery_blend_start">Empty</string>
    <string name="battery_blend_end">Full</string>
    <string name="battery_blend_between">Between</string>
    <string name="status_bar_battery_category_title">Battery</string>
    <string name="battery_style_title">Battery icon style</string>
    <string name="battery_style_summary">Change the style of the status bar battery</string>
    <string name="battery_style_port">Portrait</string>
    <string name="battery_style_circle">Circle</string>
    <string name="battery_style_dotted_circle">Dotted circle</string>
    <string name="battery_style_big_circle">Big circle</string>
    <string name="battery_style_big_dotted_circle">Big dotted circle</string>
    <string name="battery_style_text">Text</string>
    <string name="battery_style_hidden">Hidden</string>
    <string name="battery_style_q">Q style</string>
    <string name="battery_percent_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_title">Show battery percentage</string>
    <string name="status_bar_battery_percentage_summary">Show battery level percentage near the icon</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="smart_pulldown_dismissable">no dismissable notifications</string>
    <string name="smart_pulldown_ongoing">no ongoing notifications</string>
    <string name="smart_pulldown_summary">Open quick settings when there are %1$s</string>
    <string name="smart_pulldown_none_summary">Open quick settings when there are no notifications</string>
    <string name="smart_pulldown_off_summary">is turned off</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_save">Save</string>
    <string name="status_bar_clock_category_title">Clock</string>
    <string name="clock_style_category_title">Clock Settings</string>
    <string name="clock_style_category_summary">Statusbar Clock Tuner</string>
    <string name="status_bar_clock_title">Clock settings</string>
    <string name="status_bar_clock_show">Show clock and date</string>
    <string name="status_bar_clock_style_title">Clock style</string>
    <string name="status_bar_clock_style_right">Right</string>
    <string name="status_bar_clock_style_center">Center</string>
    <string name="status_bar_clock_style_left">Left</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden (default)</string>
    <string name="clock_seconds_display">Show seconds</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="status_bar_icons_category_title">Icons</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_summary">Extended notifications control</string>
    <string name="notification_heads_up_title">Heads up</string>
    <string name="notification_heads_up_summary">Allow pop up notifications</string>
    <string name="quick_settings_title">Quick settings</string>
    <string name="quick_settings_summary">Edit quick settings appearance</string>
    <string name="qs_brightness_slider">Brightness Slider</string>
    <string name="qs_show_brightness_title">Brightness slider</string>
    <string name="qs_show_brightness_summary">Show a brightness slider in the quick settings panel</string>
    <string name="qs_brightness_position_bottom_title">Brightness slider on bottom</string>
    <string name="qs_brightness_position_bottom_summary">Show a brightness slider on bottom quick settings</string>
    <string name="qs_row_column_config">QS Tiles rows &amp; columns</string>
    <string name="qs_rows_portrait_title">Rows (Portrait)</string>
    <string name="qs_rows_landscape_title">Rows (Landscape)</string>
    <string name="qs_columns_portrait_title">Columns (Portrait)</string>
    <string name="qs_columns_landscape_title">Columns (Landscape)</string>
    <string name="daylight_header_provider" translatable="false">daylight</string>
    <string name="custom_header_browse_title">Browse installed headers</string>
    <string name="custom_header_browse_summary_new">Browse all available header collections</string>
    <string name="custom_header_pick_title">Select header image</string>
    <string name="custom_header_pick_summary">Select an image to use for static mode</string>
    <string name="header_provider_disabled">Disabled</string>
    <string name="file_header_provider" translatable="false">file</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
    <string name="recents_title">Recents</string>
    <string name="recents_summary">Edit recents apps screen appearance</string>
    <string name="stock_recents_category">Stock recents</string>
    <string name="alternative_recents_category">Alternative recents</string>
    <string name="alternative_recents_swipe_up_enabled_warning_summary">When using swipe up home navigation to open recents, only stock recents are supported</string>
    <string name="slim_recents_title">Slim recents</string>
    <string name="recents_max_apps_title">Max allowed apps</string>
    <string name="recent_panel_scale_title">Size</string>
    <string name="recent_panel_expanded_mode_title">Expanded mode</string>
    <string name="recent_panel_expanded_mode_summary">Recent tasks expanded preview mode</string>
    <string name="recent_panel_expanded_mode_auto">Auto (default)</string>
    <string name="recent_panel_expanded_mode_always">Always</string>
    <string name="recent_panel_expanded_mode_never">Never</string>
    <string name="recent_panel_expanded_mode_disabled">Disabled</string>
    <string name="recent_panel_bg_color_title">Panel background color</string>
    <string name="recent_card_bg_color_title">Card background color</string>
    <string name="slim_recents_mem_display_long_click_clear_title">Memory bar longpress</string>
    <string name="slim_recents_mem_display_long_click_clear_summary">Clear recents by long-pressing the memory bar</string>
    <string name="slim_icon_pack_title">Icon Pack</string>
    <string name="slim_icon_pack_summary">Apply a custom icon pack for apps in the panel</string>
    <string name="no_iconpacks_summary">No icon packs installed</string>
    <string name="dialog_pick_iconpack_title">Pick icon pack</string>
    <string name="default_iconpack_title">Default icons</string>
    <string name="slim_recents_corner_radius_title">Card corner radius</string>
    <string name="slim_recents_aicp_empty_drawable_title">AICP empty recents</string>
    <string name="slim_recents_aicp_empty_drawable_summary">Image to show when no recent apps</string>
    <string name="recent_panel_lefty_mode_title">Show on the left edge</string>
    <string name="recent_panel_lefty_mode_summary">Show recent apps panel on the left edge</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="lockscreen_title">Lockscreen</string>
    <string name="lockscreen_summary">Edit lockscreen appearance</string>
    <string name="system_animations_title">Animations</string>
    <string name="system_animations_summary">System animations</string>
    <string name="ae_settings_title">Den customization</string>
    <string name="ae_settings_summary">Customize the look and behaviour of Den</string>
    <string name="about_title">About</string>
    <string name="info_category">Info</string>
    <string name="cerberusos_changelog_title">Changelog</string>
    <string name="cerberusos_changelog_summary">View recent changes made to CerberusOS</string>
    <string name="cerberusos_ota_title">Update center</string>
    <string name="cerberusos_ota_summary">Check for CerberusOS updates</string>
    <string name="device_maintainer_title">Device</string>
    <string name="navigation_title">Navigation</string>
    <string name="navigation_summary">Stock Navigation/Gestures</string>
    <string name="navigation_category">Navigation</string>
    <string name="theming_title">Themes</string>
    <string name="theming_summary">Device default design</string>
    <string name="app_settings_category">Applications Settings</string>
    <string name="app_settings_title">Applications Profiles</string>
    <string name="app_settings_summary">Choose per-app settings</string>
</resources>