<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2019 CERBERUSOS
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">

    <!-- CerberusOS logo -->
    <!-- <com.cerberusos.gear.preference.LongClickablePreference
        android:key="cerberusos_logo"
        android:layout="@layout/dashboard_logo" /> -->

    <PreferenceCategory
        android:title="@string/device_part_category">

        <!-- Device Part -->
        <Preference
            android:key="device_part"
            android:persistent="false"
            android:title="@string/device_part_title"
            android:icon="@drawable/ic_settings_device">
            <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="org.omnirom.device"
                 android:targetClass="org.omnirom.device.DeviceSettings"/>
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="app_setings_cat"
        android:title="@string/app_settings_category">

        <Preference
            android:key="app_setings"
            android:title="@string/app_settings_title"
            android:summary="@string/app_settings_summary" >
            <intent 
                android:targetPackage="com.cerberusos.den"
                android:targetClass="com.cerberusos.den.AppProfilesActivity"/>
        </Preference>


    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/navigation_category">
         <PreferenceScreen
            android:title="@string/button_settings_title"
            android:summary="@string/button_settings_title_summary"
            android:icon="@drawable/ic_settings_buttons"
            android:fragment="com.cerberusos.den.fragments.ButtonsSettings" />

        <PreferenceScreen
            android:title="@string/navigation_title"
            android:summary="@string/navigation_summary"
            android:icon="@drawable/ic_settings_navbar"
            android:fragment="com.cerberusos.den.fragments.Navigation" />

        <PreferenceScreen
            android:title="@string/recents_title"
            android:summary="@string/recents_summary"
            android:icon="@drawable/ic_settings_recents"
            android:fragment="com.cerberusos.den.fragments.Recents" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/user_interface_category">

        <PreferenceScreen
            android:title="@string/status_bar_title"
            android:summary="@string/status_bar_summary"
            android:icon="@drawable/ic_settings_status_bar"
            android:fragment="com.cerberusos.den.fragments.StatusBar" />

        <PreferenceScreen
            android:title="@string/quick_settings_title"
            android:summary="@string/quick_settings_summary"
            android:icon="@drawable/ic_settings_quick_settings"
            android:fragment="com.cerberusos.den.fragments.QuickSettings" />

        <PreferenceScreen
            android:title="@string/notifications_title"
            android:summary="@string/notifications_summary"
            android:icon="@drawable/ic_settings_notifications"
            android:fragment="com.cerberusos.den.fragments.Notifications" />

        <PreferenceScreen
            android:title="@string/lockscreen_title"
            android:summary="@string/lockscreen_summary"
            android:icon="@drawable/ic_settings_lockscreen"
            android:fragment="com.cerberusos.den.fragments.Lockscreen" />

        <!-- PreferenceScreen
            android:title="@string/panel_porn_title"
            android:summary="@string/panel_porn_summary"
            android:icon="@drawable/ic_settings_panel_porn"
            android:fragment="com.cerberusos.den.fragments.PanelPorn" / -->

        <PreferenceScreen
            android:title="@string/theming_title"
            android:summary="@string/theming_summary"
            android:icon="@drawable/ic_settings_theming"
            android:fragment="com.cerberusos.den.fragments.Theming" />

        <!-- PreferenceScreen
            android:title="@string/other_ui_title"
            android:summary="@string/other_ui_summary"
            android:icon="@drawable/ic_settings_other_ui"
            android:fragment="com.cerberusos.den.fragments.OtherUi" / -->

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/system_category">

        <PreferenceScreen
            android:title="@string/system_animations_title"
            android:summary="@string/system_animations_summary"
            android:icon="@drawable/ic_settings_system_animations"
            android:fragment="com.cerberusos.den.fragments.SystemAnimations" />

        <!--PreferenceScreen
            android:title="@string/system_behaviour_title"
            android:summary="@string/system_behaviour_summary"
            android:icon="@drawable/ic_settings_system_behaviour"
            android:fragment="com.cerberusos.den.fragments.SystemBehaviour" / -->

        <PreferenceScreen
            android:title="@string/system_extensions_title"
            android:summary="@string/system_extensions_summary"
            android:icon="@drawable/ic_settings_system_extensions"
            android:fragment="com.cerberusos.den.fragments.SystemExtensions" />


        <PreferenceScreen
            android:title="@string/audio_tweaks_title"
            android:summary="@string/audio_tweaks_summary"
            android:icon="@drawable/ic_settings_system_audio"
            android:fragment="com.cerberusos.den.fragments.AudioTweaks" />

        <PreferenceScreen
            android:title="@string/powersave_title"
            android:summary="@string/powersave_summary"
            android:icon="@drawable/ic_settings_system_powersave"
            android:fragment="com.cerberusos.den.fragments.PowerSave" />

        <PreferenceScreen
            android:title="@string/torch_title"
            android:summary="@string/torch_summary"
            android:icon="@drawable/ic_settings_torch"
            android:fragment="com.cerberusos.den.fragments.Torch" />

        <PreferenceScreen
            android:title="@string/vibrator_title"
            android:summary="@string/vibrator_summary"
            android:icon="@drawable/ic_settings_vibrator"
            android:fragment="com.cerberusos.den.fragments.Vibrator" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other_category">

        <!-- <PreferenceScreen
            android:title="@string/about_title"
            android:summary="@string/about_summary"
            android:icon="@drawable/ic_settings_about"
            android:fragment="com.cerberusos.den.fragments.About" /> -->

        <Preference
            android:key="cerberusos_ota"
            android:title="@string/cerberusos_ota_title"
            android:summary="@string/cerberusos_ota_summary"
            android:icon="@drawable/ic_settings_ota" />

        <!-- <PreferenceScreen
            android:key="log_it"
            android:title="@string/log_it_title"
            android:summary="@string/log_it_summary"
            android:icon="@drawable/ic_settings_log_it"
            android:fragment="com.cerberusos.den.fragments.LogIt" /> -->

        <PreferenceScreen
            android:title="@string/ae_settings_title"
            android:summary="@string/ae_settings_summary"
            android:icon="@drawable/ic_settings_ae_customization"
            android:fragment="com.cerberusos.den.fragments.AeSettings" />

    </PreferenceCategory>
</PreferenceScreen>
